@@ -12,7 +12,7 @@ ResourceIncludes=
 MakeIncludes=
 Compiler=
 CppCompiler=-D__NO_HOMEDIR_CONF___@@_-D__USE_MYSQL___@@_-D__USE_SQLITE___@@_-D__CONSOLE___@@_-D__EXCEPTION_TRACER___@@_
-Linker=-O1_@@_-lboost_regex_@@_-lboost_system_@@_-lgmp_@@_-lluasql_mysql_@@_-lluasql_sqlite_@@_-llua5.1_@@_-lmysql_@@_-lsqlite3_@@_-lwsock32_@@_-lxml2_@@_-lmysql_@@_-lws2_32_@@_-s_@@_
+Linker=-O1_@@_-lboost_regex_@@_-lboost_system_@@_-lgmp_@@_-llua5.1_@@_-lmysql_@@_-lsqlite3_@@_-lwsock32_@@_-lxml2_@@_-lmysql_@@_-lws2_32_@@_-s_@@_
 IsCpp=1
 Icon=TheForgottenServer-console-debug.ico
 ExeOutput=
